# SOR

./: AI_7F.pcd  CMakeLists.txt  README.md  gachon_hall.pcd  lec07_sor.cpp
src/: CMakeLists.txt  lec07_sor.cpp
